fix pride outline for dark mode

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -42,6 +42,10 @@
   -webkit-text-stroke-color: #000000;
 }
 
+.theme--dark .heading--pride .heading__text {
+  -webkit-text-stroke-color: #CCCCCC;
+}
+
 .sub-heading {
   margin-top: 0;
   text-align: center;
